revisi structure controllers until services & make unit testing
