# docs/swagger.json
@@ -16,10 +16,86 @@
     },
     "host": "localhost:8082",
     "basePath": "/",
-    "paths": {},
+    "paths": {
+        "/api/main/v1/add": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "menambahkan product baru kedalam database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "managements"
+                ],
+                "parameters": [
+                    {
+                        "description": "Content New Product",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success add product",
+                        "schema": {
+                            "$ref": "#/definitions/response.ProductAdd200"
+                        }
+                    },
+                    "400": {
+                        "description": "code harus di isi !!, body is still missing",
+                        "schema": {
+                            "$ref": "#/definitions/response.ProductAdd400"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "request.CreateProduct": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.ProductAdd200": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.ProductAdd400": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        }
+    },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
